EPMRPP-78128 || Attempt to fix timer view on ios

--- a/app/src/pages/outside/loginPage/pageBlocks/loginBlock/loginForm/loginForm.scss
+++ b/app/src/pages/outside/loginPage/pageBlocks/loginBlock/loginForm/loginForm.scss
@@ -94,7 +94,7 @@
   line-height: 16px;
 
   .time {
-    margin-top: 16px;
+    padding-top: 16px;
   }
 
   b {
